--- a/TurnUp/android/app/src/main/res/values/strings.xml
+++ b/TurnUp/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+
     <string name="app_name">TurnUp</string>
+    <string name="facebook_app_id">649895568519152</string>
 </resources>
